--- a/Clase1.ipynb
+++ b/Clase1.ipynb
@@ -29,41 +29,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "b7e55523",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "348f8d99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pickle\n",
+    "import pandas as pd\n",
     "import numpy as np"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "495c62cc",
+   "cell_type": "markdown",
+   "id": "d191c4e9-bd07-41da-a66b-91ae04ed6e42",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import sklearn"
+    "## Lectura de un archivo"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f62cf891",
+   "id": "c6f51fb8-829f-4301-825b-13e678341f97",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_csv = pd.read_csv(\"data/ames.csv\")"
+   ]
   }
  ],
  "metadata": {
